@@ -4,7 +4,7 @@ CMD=rdup
 SHA_IN=shared.sh shared.pl
 WRP_IN=rdup-restore rdup-snap-link rdup-simple
 PRL_IN=rdup-gzip rdup-crypt rdup-snap rdup-gpg rdup-hist rdup-s3
-MAN1_IN=rdup.1 rdup-restore.1 rdup-snap.1 rdup-backups.1 rdup-snap-link.1 rdup-simple.1 rdup-crypt.1 rdup-gzip.1 rdup-gpg.1 rdup-hist.1 rdup-s3.1
+MAN1_IN=rdup.1 rdup-restore.1 rdup-snap.1 rdup-backups.1 rdup-simple.1 rdup-crypt.1 rdup-gzip.1 rdup-gpg.1 rdup-hist.1 rdup-s3.1
 
 SHA=$(addprefix shared/, $(SHA_IN))
 PRL=$(addprefix pl-tools/, $(PRL_IN))
