@@ -1,53 +1,0 @@
-'\" t
-.TH RDUP-SNAP-LINK 1 "24 Oct 2006" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
-        
-.SH NAME
-rdup-snap-link \- create a hard linked copy of a previous backup
-
-.SH SYNOPSIS
-.B rdup-snap-link
-[
-.IR -H
-]
-.IR DAYS
-.IR BACKUPDIR
-.IR NOW
-
-.SH DESCRIPTION
-\fBrdup-snap-link\fR creates a hard linked copy of a previous
-backup directory. It will look back \fIDAYS\fR days (or hours with \-H)
-from \fINOW\fR.
-.PP
-If such a directory is created \fBrdup-snap-link\fR
-exits with 0. If a full dump should be performed a 1 is returned.
-If 2 is returned an error has occurred. GNU cp is used for the actual 
-creation of the copy. On non GNU operating systems you may need to
-install GNU cp.
-.PP
-This utility is called from \fBrdup-simple\fR.
-.PP
-The \-H option makes rdup-snap-link understand hourly backups. It will
-then look back DAYS \fIhours\fR.
-.PP
-The NOW argument should be formatted as YYYYMM/DD without \-H and as
-YYYYMM/DD/HH with \-H.
-
-.SH FILES
-\fB@sysconfdir@/rdup/rdup-snapshot.gnu\fR with the location of GNU cp and GNU
-date. This is probably only needed on non GNU/Linux systems.
-This file has the following format:
-
-.RS
-        GNU_DATE=/path/to/gnu_date
-        GNU_CP=/path/to/gnu_cp
-.RE
-
-For example:
-
-.RS
-        GNU_DATE=/usr/local/bin/date
-        GNU_CP=/usr/local/bin/cp
-.RE
-
-.SH SEE ALSO
-rdup-backups(1) and rdup-simple(1).
