@@ -10,7 +10,7 @@ exec_prefix=@exec_prefix@
 datadir=@datadir@/rdup
 sysconfdir=@sysconfdir@/rdup
 lockdir=/var/lock
-GNU_DEFS=rdup-snapshot.gnu
+GNU_DEFS=rdup-simple.gnu
 
 # common stuff
 if ! source $datadir/shared.sh; then
@@ -50,7 +50,7 @@ OPTIONS:
 HELP
 }
 
-PROGNAME=$0
+export PROGNAME=$0
 NOW=`date +%Y%m/%d`
 c=""
 ssh=""
